--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,4 +18,5 @@ dependencies {
     compile 'com.facebook.react:react-native:+'
     compile 'com.yalantis:ucrop:2.2.0-native'
     compile 'id.zelory:compressor:2.1.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
