--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,4 +19,6 @@ dependencies {
     compile 'com.github.yalantis:ucrop:2.2.1-native'
     compile 'id.zelory:compressor:2.1.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.zhihu.android:matisse:0.5.0-beta3'
 }
